--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nixu</title>
     <script defer src="./js/nsh.js" id="lzutf8"></script>
-	<link rel="stylesheet" href="./css/nsh.css">
+    <link rel="stylesheet" href="./css/nsh.css">
 </head>
 <body>
-	<div id="welcome_message">
-		Welcome, traveller.<br>
-		Enter "help" or "?" for a list of commands.<br>
-		<br>
-		``It's a NIXU system... I know this!''<br>
-		======================================
-	</div>
-	<span id="active_prompt" class="active prompt" contenteditable="true"></span>
+    <div id="welcome_message">
+        Welcome, traveller.<br>
+        Enter "help" or "?" for a list of commands.<br>
+        <br>
+        ``It's a NIXU system... I know this!''<br>
+        ======================================
+    </div>
+    <span id="active_prompt"
+          class="active prompt"
+          contenteditable="true"
+          spellcheck=false></span>
 </body>
 </html>
