--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nixu</title>
+    <title>NIXU</title>
     <script defer src="./js/nsh.js" id="lzutf8"></script>
     <link rel="stylesheet" href="./css/nsh.css">
 </head>
