Use US standard spelling.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="welcome_message">
-        Welcome, traveller.<br>
+        Welcome, traveler.<br>
         Enter "help" or "?" for a list of commands.<br>
         <br>
         ``It's a NIXU system... I know this!''<br>
