Break on word for the welcome message.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="./css/nsh.css">
 </head>
 <body>
-    <div id="welcome_message">
+    <div class="welcome" id="welcome_message">
         Welcome, traveler.<br>
         Enter "help" or "?" for a list of commands.<br>
         <br>
         ``It's a NIXU system... I know this!''<br>
-        ======================================
     </div>
     <span id="active_prompt"
           class="active prompt"
