--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NIXU</title>
-    <script defer src="./js/nsh.js" id="lzutf8"></script>
+    <script defer src="./js/nsh.mjs" type="module"></script>
     <link rel="stylesheet" href="./css/nsh.css">
 </head>
 <body>
