Better modularization, more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <br>
         ``It's a NIXU system... I know this!''<br>
     </div>
-    <span id="active_prompt"
-          class="active prompt"
-          contenteditable="true"
-          spellcheck=false></span>
+    <div class="active-prompt-container" id="active_prompt_container">
+        <span id="active_prompt"
+              class="active prompt"
+              contenteditable="true"
+              spellcheck=false></span>
+    </div>
 </body>
 </html>
