Caret highlighting. No more cool breathing animation, but sacrifices must be made.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NIXU</title>
-    <script defer src="./js/nsh.mjs" type="module"></script>
     <link rel="stylesheet" href="./css/nsh.css">
+    <script defer src="./js/nsh.mjs" type="module"></script>
 </head>
 <body>
     <div class="welcome" id="welcome_message">
@@ -20,6 +20,7 @@
               class="active prompt"
               contenteditable="true"
               spellcheck=false></span>
+        <span id="shadow" class="shadow"><span class="caret">&nbsp;</span></span>
     </div>
 </body>
 </html>
